--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "angular-cesium": "0.0.53",
+    "angular-cesium": "^0.0.55",
     "cesium": "^1.53.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
